fallback Configuration for app1

--- a/app1/src/main/resources/application.properties
+++ b/app1/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 server.port:8081
+
+//resilience4j configuration
+resilience4j.circuitbreaker.instances.app2CircuitBreaker.registerHealthIndicator=true
+resilience4j.circuitbreaker.instances.app2CircuitBreaker.slidingWindowSize=100
+resilience4j.circuitbreaker.instances.app2CircuitBreaker.minimumNumberOfCalls=10
+resilience4j.circuitbreaker.instances.app2CircuitBreaker.permittedNumberOfCallsInHalfOpenState=10
+resilience4j.circuitbreaker.instances.app2CircuitBreaker.waitDurationInOpenState=10000
+resilience4j.circuitbreaker.instances.app2CircuitBreaker.failureRateThreshold=50
+resilience4j.circuitbreaker.instances.app2CircuitBreaker.eventConsumerBufferSize=10
