--- a/app2/src/main/resources/application.properties
+++ b/app2/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 server.port=8082
+#management.health.circuitbreaker.enabled=true
+#resilience4j.circuitbreaker.instances.breaker.registerHealthIndicator=true
+spring.cloud.circuitbreaker.resilience4j.enabled=true
+resilience4j.circuitbreaker.instances.breaker.slidingWindowSize=100
+resilience4j.circuitbreaker.instances.breaker.minimumNumberOfCalls=10
+resilience4j.circuitbreaker.instances.breaker.permittedNumberOfCallsInHalfOpenState=10
+resilience4j.circuitbreaker.instances.breaker.waitDurationInOpenState=10000
+resilience4j.circuitbreaker.instances.breaker.failureRateThreshold=50
+resilience4j.circuitbreaker.instances.breaker.eventConsumerBufferSize=10
