--- a/app2/pom.xml
+++ b/app2/pom.xml
@@ -54,6 +54,11 @@
 			<artifactId>resilience4j-all</artifactId>
 			<version>2.0.2</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+			<version>3.0.0</version>
+		</dependency>
 
 		<!-- https://mvnrepository.com/artifact/io.github.resilience4j/resilience4j-all -->
 	</dependencies>
