--- a/app1/src/main/resources/application.properties
+++ b/app1/src/main/resources/application.properties
@@ -1,11 +1,18 @@
 server.port:8081
 
 //resilience4j configuration
+#spring.cloud.circuitbreaker.resilience4j.enabled=true
+#resilience4j.circuitbreaker.instances.app2CircuitBreaker.registerHealthIndicator=true
+#resilience4j.circuitbreaker.instances.app2CircuitBreaker.slidingWindowSize=100
+#resilience4j.circuitbreaker.instances.app2CircuitBreaker.minimumNumberOfCalls=10
+#resilience4j.circuitbreaker.instances.app2CircuitBreaker.permittedNumberOfCallsInHalfOpenState=10
+#resilience4j.circuitbreaker.instances.app2CircuitBreaker.waitDurationInOpenState=10000
+#resilience4j.circuitbreaker.instances.app2CircuitBreaker.failureRateThreshold=50
+#resilience4j.circuitbreaker.instances.app2CircuitBreaker.eventConsumerBufferSize=10
 spring.cloud.circuitbreaker.resilience4j.enabled=true
-resilience4j.circuitbreaker.instances.app2CircuitBreaker.registerHealthIndicator=true
-resilience4j.circuitbreaker.instances.app2CircuitBreaker.slidingWindowSize=100
-resilience4j.circuitbreaker.instances.app2CircuitBreaker.minimumNumberOfCalls=10
-resilience4j.circuitbreaker.instances.app2CircuitBreaker.permittedNumberOfCallsInHalfOpenState=10
-resilience4j.circuitbreaker.instances.app2CircuitBreaker.waitDurationInOpenState=10000
-resilience4j.circuitbreaker.instances.app2CircuitBreaker.failureRateThreshold=50
-resilience4j.circuitbreaker.instances.app2CircuitBreaker.eventConsumerBufferSize=10
+resilience4j.circuitbreaker.instances.breaker.slidingWindowSize=100
+resilience4j.circuitbreaker.instances.breaker.minimumNumberOfCalls=10
+resilience4j.circuitbreaker.instances.breaker.permittedNumberOfCallsInHalfOpenState=10
+resilience4j.circuitbreaker.instances.breaker.waitDurationInOpenState=10000
+resilience4j.circuitbreaker.instances.breaker.failureRateThreshold=50
+resilience4j.circuitbreaker.instances.breaker.eventConsumerBufferSize=10
