ResponseEnity changes commited

--- a/app1/src/main/resources/application.properties
+++ b/app1/src/main/resources/application.properties
@@ -1,6 +1,12 @@
 server.port:8081
 
-//resilience4j configuration
+spring.application.name=app1
+
+
+#Eureka Client Configuration
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+
+#resilience4j configuration
 #spring.cloud.circuitbreaker.resilience4j.enabled=true
 #resilience4j.circuitbreaker.instances.app2CircuitBreaker.registerHealthIndicator=true
 #resilience4j.circuitbreaker.instances.app2CircuitBreaker.slidingWindowSize=100
