--- a/app2/src/main/resources/application.properties
+++ b/app2/src/main/resources/application.properties
@@ -1,6 +1,11 @@
 server.port=8082
 #management.health.circuitbreaker.enabled=true
 #resilience4j.circuitbreaker.instances.breaker.registerHealthIndicator=true
+
+spring.application.name=app2
+#Eureka Client Configuration
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+
 spring.cloud.circuitbreaker.resilience4j.enabled=true
 resilience4j.circuitbreaker.instances.breaker.slidingWindowSize=100
 resilience4j.circuitbreaker.instances.breaker.minimumNumberOfCalls=10
