updated pom.xml and application.properties of api-gateway

--- a/app1/src/main/resources/application.properties
+++ b/app1/src/main/resources/application.properties
@@ -1,10 +1,9 @@
 server.port:8081
-
 spring.application.name=app1
-
-
 #Eureka Client Configuration
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+eureka.instance.prefer-ip-address=true
+eureka.instance.hostname=localhost
 
 #resilience4j configuration
 #spring.cloud.circuitbreaker.resilience4j.enabled=true
