--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -1,14 +1,16 @@
 spring.application.name=api-gateway
 server.port=8083
 
-#Eureka Client Configuration
-eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+# Eureka Client Configuration
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 
 # Spring Cloud Gateway Routes
 spring.cloud.gateway.routes[0].id=app1_route
-spring.cloud.gateway.routes[0].uri=http://localhost:8081
+spring.cloud.gateway.routes[0].uri=lb://app1
 spring.cloud.gateway.routes[0].predicates[0]=Path=/app1/**
+spring.cloud.gateway.routes[0].filters[0]=StripPrefix=1
 
 spring.cloud.gateway.routes[1].id=app2_route
-spring.cloud.gateway.routes[1].uri=http://localhost:8082
+spring.cloud.gateway.routes[1].uri=lb://app2
 spring.cloud.gateway.routes[1].predicates[0]=Path=/app2/**
+spring.cloud.gateway.routes[1].filters[0]=StripPrefix=1
