--- a/app2/src/main/resources/application.properties
+++ b/app2/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 server.port=8082
 spring.application.name=app2
 #Eureka Client Configuration
-eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+eureka.client.serviceUrl.defaultZone=http://eureka-server:8761/eureka
+
 eureka.instance.prefer-ip-address=true
 eureka.instance.hostname=localhost
 
