--- a/eureka-server/Dockerfile
+++ b/eureka-server/Dockerfile
@@ -2,8 +2,8 @@ FROM openjdk:17-jdk-slim
 LABEL authors="sandeep kumar"
 
 ARG JAR_FILE=target/*.jar
-COPY ${JAR_FILE} app.jar
+COPY ${JAR_FILE}  eurekaserver.jar
 EXPOSE 8761
 
 WORKDIR /app
-ENTRYPOINT ["java", "-jar", "app.jar"]
+ENTRYPOINT ["java", "-jar", "/eurekaserver.jar"]
