docker file updated

--- a/app1/src/main/resources/application.properties
+++ b/app1/src/main/resources/application.properties
@@ -1,10 +1,13 @@
-server.port:8081
+server.port=8081
 spring.application.name=app1
 #Eureka Client Configuration
-eureka.client.serviceUrl.defaultZone=http://eureka-server:8761/eureka
-
+eureka.client.serviceUrl.defaultZone=${eureka.server.url:http://localhost:8761/eureka}
 eureka.instance.prefer-ip-address=true
 eureka.instance.hostname=localhost
+app2.hostname=${app1.hostname:http://localhost:8082}
+
+
+
 
 #resilience4j configuration
 #spring.cloud.circuitbreaker.resilience4j.enabled=true
