--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -2,7 +2,9 @@ spring.application.name=api-gateway
 server.port=8083
 
 # Eureka Client Configuration
-eureka.client.serviceUrl.defaultZone=http://eureka-server:8761/eureka
+#eureka.client.serviceUrl.defaultZone=http://eureka-server:8761/eureka
+
+eureka.client.serviceUrl.defaultZone=${eureka.server.url:http://localhost:8761/eureka}
 
 # Spring Cloud Gateway Routes
 spring.cloud.gateway.routes[0].id=app1_route
