--- a/app2/src/main/resources/application.properties
+++ b/app2/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 server.port=8082
 spring.application.name=app2
 #Eureka Client Configuration
-eureka.client.serviceUrl.defaultZone=http://eureka-server:8761/eureka
-
+eureka.client.serviceUrl.defaultZone=${eureka.server.url:http://localhost:8761/eureka}
 eureka.instance.prefer-ip-address=true
 eureka.instance.hostname=localhost
-
+#app1.url=${app1.url:http://localhost:8081}
+app1.url=http://localhost:8081
 
 
 spring.cloud.circuitbreaker.resilience4j.enabled=true
