added the docker-compose.file

--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -1,18 +1,23 @@
+
 spring.application.name=api-gateway
 server.port=8083
 
 # Eureka Client Configuration
-#eureka.client.serviceUrl.defaultZone=http://eureka-server:8761/eureka
-
-eureka.client.serviceUrl.defaultZone=${eureka.server.url:http://localhost:8761/eureka}
+eureka.client.serviceUrl.defaultZone=${EUREKA_CLIENT_SERVICEURL_DEFAULTZONE}
 
 # Spring Cloud Gateway Routes
 spring.cloud.gateway.routes[0].id=app1_route
 spring.cloud.gateway.routes[0].uri=lb://app1
 spring.cloud.gateway.routes[0].predicates[0]=Path=/app1/**
-spring.cloud.gateway.routes[0].filters[0]=StripPrefix=1
+#spring.cloud.gateway.routes[0].filters[0]=StripPrefix=1
 
 spring.cloud.gateway.routes[1].id=app2_route
 spring.cloud.gateway.routes[1].uri=lb://app2
 spring.cloud.gateway.routes[1].predicates[0]=Path=/app2/**
-spring.cloud.gateway.routes[1].filters[0]=StripPrefix=1
+#spring.cloud.gateway.routes[1].filters[0]=StripPrefix=1
+
+
+
+
+
+
