--- a/app1/src/main/resources/application.properties
+++ b/app1/src/main/resources/application.properties
@@ -1,11 +1,10 @@
 server.port=8081
 spring.application.name=app1
-#Eureka Client Configuration
-eureka.client.serviceUrl.defaultZone=${eureka.server.url:http://localhost:8761/eureka}
+# Eureka Client Configuration
+eureka.client.serviceUrl.defaultZone=${EUREKA_CLIENT_SERVICEURL_DEFAULTZONE}
 eureka.instance.prefer-ip-address=true
-eureka.instance.hostname=localhost
-app2.hostname=${app1.hostname:http://localhost:8082}
-
+eureka.instance.hostname=${eureka.instance.hostname:app1}
+app2.hostname=${APP2_HOSTNAME:http://localhost:8082}
 
 
 
