docker-compose changes , created profile for apigateway to handle localhost and docker

--- a/api-gateway/src/main/resources/application-docker.properties
+++ b/api-gateway/src/main/resources/application-docker.properties
@@ -1,8 +1,11 @@
 spring.application.name=api-gateway
 server.port=8083
 
+logging.level.org.springframework.cloud.gateway=DEBUG
+
+
 # Eureka Client Configuration
-eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+eureka.client.serviceUrl.defaultZone=${EUREKA_CLIENT_SERVICEURL_DEFAULTZONE}
 
 # Spring Cloud Gateway Routes
 spring.cloud.gateway.routes[0].id=app1_route
