--- a/app1/src/main/resources/application.properties
+++ b/app1/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 server.port=8081
 spring.application.name=app1
 # Eureka Client Configuration
-eureka.client.serviceUrl.defaultZone=${EUREKA_CLIENT_SERVICEURL_DEFAULTZONE}
+eureka.client.serviceUrl.defaultZone=${EUREKA_CLIENT_SERVICEURL_DEFAULTZONE:http://localhost:8761/eureka}
 eureka.instance.prefer-ip-address=true
-eureka.instance.hostname=${eureka.instance.hostname:app1}
+eureka.instance.hostname=app1
 app2.hostname=${APP2_HOSTNAME:http://localhost:8082}
 
 
