--- a/app2/src/main/resources/application.properties
+++ b/app2/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 server.port=8082
 spring.application.name=app2
 # Eureka Client Configuration
-eureka.client.serviceUrl.defaultZone=${EUREKA_CLIENT_SERVICEURL_DEFAULTZONE}
+eureka.client.serviceUrl.defaultZone=${EUREKA_CLIENT_SERVICEURL_DEFAULTZONE:http://localhost:8761/eureka}
 eureka.instance.prefer-ip-address=true
-eureka.instance.hostname=${eureka.instance.hostname:app2}
+eureka.instance.hostname=app2
 app1.hostname=${APP1_HOSTNAME:http://localhost:8081}
 
 
