--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,10 @@ version: "3.9"
 
 services:
   eurekaserver:
-    image: skumar97/eurekaserver:v1
+    build:
+      context: ./eureka-server
+      dockerfile: Dockerfile
+    image: skumar97/eurekaserver:v3
     container_name: eurekaserver
     networks:
       - my-network
@@ -11,7 +14,10 @@ services:
       - "8761:8761"
 
   apigateway:
-    image: skumar97/apigateway:v1
+    build:
+      context: ./api-gateway
+      dockerfile: Dockerfile
+    image: skumar97/apigateway:v3
     container_name: apigateway
     networks:
       - my-network
@@ -21,9 +27,13 @@ services:
       - "8083:8083"
     environment:
       - EUREKA_CLIENT_SERVICEURL_DEFAULTZONE=http://eurekaserver:8761/eureka
+      - spring.profiles.active=docker
 
   app1:
-    image: skumar97/app1:v1
+    build:
+      context: ./app1
+      dockerfile: Dockerfile
+    image: skumar97/app1:v3
     container_name: app1
     networks:
       - my-network
@@ -36,7 +46,10 @@ services:
       - APP2_HOSTNAME=http://app2:8082
 
   app2:
-    image: skumar97/app2:v1
+    build:
+      context: ./app2
+      dockerfile: Dockerfile
+    image: skumar97/app2:v3
     container_name: app2
     networks:
       - my-network
