--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,16 @@
 version: "3.9"
 
 services:
+  jenkins:
+    image: jenkins/jenkins:lts
+    container_name: jenkins
+    ports:
+      - "8080:8080"
+      - "50000:50000"
+    volumes:
+      - jenkins_home:/var/jenkins_home
+      - /var/run/docker.sock:/var/run/docker.sock
+
   eurekaserver:
     build:
       context: ./eureka-server
@@ -64,3 +74,6 @@ services:
 networks:
   my-network:
     driver: bridge
+    
+volumes:
+  jenkins_home:
